--- a/application-zuul-dev.yml
+++ b/application-zuul-dev.yml
@@ -11,10 +11,10 @@ eureka:
     instance-id: gateway-9527.com
     prefer-ip-address: true
 zuul:
+  ignored-services: "*"
+  prefix: "/services" 
   routes:
     plat.serviceId: aigou-plat #这是调用满足条件的服务名，注意要小写
     plat.path: /plat/** #这是所有路径前的通配
     product.serviceId: aigou-product #这是调用满足条件的服务名，注意要小写
     product.path: /product/** #这是所有路径前的通配
-  ignored-services: "*" #用*来通配符，忽略从9527端口通过服务名来调用
-  prefix: "/services" #这是所有路径的前缀 
