--- a/application-plat-test.yml
+++ b/application-plat-test.yml
@@ -8,4 +8,4 @@ eureka:
     service-url:
       defaultZone: http://localhost:7001/eureka
   instance:
-    prefer-ip-address: true
+    prefer-ip-address: true #色色的所所所所所
