--- a/application-zuul-dev.yml
+++ b/application-zuul-dev.yml
@@ -11,9 +11,9 @@ eureka:
     prefer-ip-address: true
 zuul:
   routes:
-    plat.serviceId: aigou-plat #这是调用满足条件的服务名，注意要小写
-    plat.path: /plat/** #这是所有路径前的通配
-    product.serviceId: aigou-product #这是调用满足条件的服务名，注意要小写
-    product.path: /product/** #这是所有路径前的通配
+    plat.serviceId: aigou-plat 
+    plat.path: /plat/** 
+    product.serviceId: aigou-product 
+    product.path: /product/** 
   ignored-services: "*"
   prefix: "/services"
